# APC-Command-line-tool

./: CMakeLists.txt  README.md  main.cpp
lib_args/: CMakeLists.txt
lib_args/inc/: argument.h  flag_option.h  full_argument_parser.h  iargument_parser.h  ioption.h  ioption_parser.h  lib_args.h  option.h  option_parser.h  option_parser_builder.h
lib_args/inc/argument_parsers/: bool_argument_parser.h  double_argument_parser.h  int_argument_parser.h  string_argument_parser.h
lib_args/inc/argument_type/: bool_argument.h  double_argument.h  int_argument.h  string_argument.h
lib_args/inc/inc_argument/: int_argument.h
lib_args/inc/interfaces/: iargument.h  iargument_parser.h  ilogger.h  ioption_parser_builder.h  itext_writer.h
lib_args/inc/loggers/: console_logger.h
lib_args/inc/option_type/: int_option.h
lib_args/inc/writers/: console_writer.h
lib_args/src/: flag_option.cpp  full_argument_parser.cpp  lib_args.cpp  option.cpp  option_parser.cpp  option_parser_builder.cpp
lib_args/src/argument_parsers/: bool_argument_parser.cpp  double_argument_parser.cpp  int_argument_parser.cpp  string_argument_parser.cpp
lib_args/src/argument_type/: bool_argument.cpp  double_argument.cpp  int_argument.cpp  string_argument.cpp
lib_args/src/loggers/: console_logger.cpp
lib_args/src/writers/: console_writer.cpp
